Fix alignment issue on mobile.

--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -917,3 +917,12 @@ body {
     font-size: 20px;
     margin-left: 2em;
 }
+
+@media(max-width:320px) {
+    h3 {
+        font-size: 16px;
+    }
+    section h2.section-heading {
+        font-size: 26px;
+    }
+}
